small fix swagger and composer
