# app/Http/Controllers/Controller.php
@@ -12,7 +12,16 @@ use Illuminate\Routing\Controller as BaseController;
  * @OA\Info(
  *   title="AUTH API",
  *   version="1.0",
- * )
+ * ),
+ * @OA\SecurityScheme(
+ * type="http",
+ * description="Login with email and password to get the authentication token",
+ * name="Token based Based",
+ * in="header",
+ * scheme="bearer",
+ * bearerFormat="JWT",
+ * securityScheme="bearerAuth",
+ * ),
  */
 class Controller extends BaseController
 {
